--- a/styles/popup.css
+++ b/styles/popup.css
@@ -2,10 +2,40 @@ body {
     font-family: Arial, sans-serif;
     width: 320px;
     height: 600px;
+    margin: 0;
+    padding: 0;
+
 }
 
 #deck-list {
     width: 320px;
     height: 600px;
     overflow-y: auto;
+}
+
+.header {
+    margin: 0;
+    width: 320px;
+    height: 50px;
+    background-color: #7745d4;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-div {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.card-remove-button {
+  background-color: transparent;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  float: right;
+  width: 20%;
 }
