--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,4 +1,3 @@
-
 :root {
     --background-color: #78A2CC;
     --listbg1: #C0EFFF;
@@ -10,6 +9,40 @@
     --list-bg-experimental: #f2f5fa;
     --card-bg-experimental: #f9fafb;
 }
+
+.header-wrapper {
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    margin-bottom: 10px;
+    background-color: white;
+}
+
+#deck-list-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.deck-list-button {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 30%;
+    background-color: white;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+    text-align: center;
+    opacity: 0.6;
+}
+
+.deck-list-button:hover {
+    background-color: var(--listbg2);
+    opacity: 1;
+}
+
+
+
 .header {
     background-color: var(--bgpale);
     color: var(--text-color);
@@ -20,8 +53,6 @@
     text-align: left;
     display: flex;
     align-items: center;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
 }
 
 .header img {
@@ -39,6 +70,7 @@ body {
     height: 600px;
     margin: 0;
     padding: 0;
+    background-color: var(--list-bg-experimental);
 
 }
 
@@ -47,6 +79,7 @@ body {
     height: auto;
     overflow-y: auto;
     background-color: var(--list-bg-experimental);
+    padding-bottom: 10px;
 }
 
 .card-div {
@@ -80,20 +113,3 @@ body {
   font-size: 1.1em;
 }
 
-.deck-list-button {
-    width: 100%;
-    background-color: var(--bgpale2);
-    border: none;
-    /* border-bottom: 3px dotted var(--background-color); */
-    font-size: 1.5em;
-    padding: 10px;
-    cursor: pointer;
-    text-align: center;
-    opacity: 0.6;
-    
-}
-
-.deck-list-button:hover {
-    background-color: var(--listbg2);
-    opacity: 1;
-}
