--- a/styles/popup.css
+++ b/styles/popup.css
@@ -83,12 +83,43 @@ body {
 }
 
 .card-div {
-  border-radius: 10px;
-  margin: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
-  background-color: var(--card-bg-experimental);
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    width:90%;
+    margin-bottom: 10px;
+    margin: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    background-color: var(--card-bg-experimental);    
+    z-index: 0;
+    position: relative;
+    
+}
+
+.card-div::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+    width:100%;
+	height: 95%;
+    opacity: 0;
+    z-index: 1;
+    transition: all 0.4s;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: rgba(0, 0, 0, 1);
+    border-bottom-color: rgba(0, 0, 0, 1);
+    transform: scale(0.1, 1);
+    
+}
+
+.card-div:hover::before {
+    opacity: 1;
+    transform: scale(1,1);
 }
 
 .card-remove-button {
@@ -96,6 +127,7 @@ body {
   color: white;
   border: none;
   /* padding: 5px 10px; */
+  z-index: 2;
   border-radius: 5px;
   cursor: pointer;
   float: right;
